--- a/public/main.css
+++ b/public/main.css
@@ -60,6 +60,14 @@ body {
   z-index: 99;
 }
 
+#maincontainer{
+  overflow-y: auto;
+  max-height: 100%;
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+}
+
 @media only screen and (max-width:600px){
   .controls {
     height: 9%;
