--- a/public/main.css
+++ b/public/main.css
@@ -7,7 +7,7 @@ body {
 }
 
 .mainbody {
-  background: #efefef none repeat scroll 0 0;
+  background: #efefef;
   height: 80vh;
   width: 100%;
   display: flex;
@@ -77,10 +77,7 @@ body {
   display: flex;
   align-items: center;
   align-self: flex-start;
-  width: fit-content;
-  height: fit-content;
-  flex-shrink: none;
-  max-height: 30px;
+  max-width: 80%;
   background-color: #34b7f1;
   padding: 10px;
   margin: 15px;
@@ -101,22 +98,28 @@ body {
   flex-wrap: wrap;
   align-items: center;
   background-color: #25d366;
-  width: fit-content;
+  max-width: 80%;
   height: fit-content;
-  flex-shrink: none;
-  max-height: 30px;
   padding: 10px;
   margin: 15px;
   border-radius: 10px;
   color: aliceblue;
 }
 
+.messagetext {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4; /* number of lines to show */
+  -webkit-box-orient: vertical;
+}
+
 .sendbutton {
   display: flex;
   border-radius: 50%;
-  border: grey inset 1px;
+  border: grey solid 1px;
   padding: 5px;
-  margin: 0 2% 0 1%;
+  margin: 0 10px 0 5px;
   vertical-align: middle;
   background-color: aliceblue;
 }
