--- a/public/main.css
+++ b/public/main.css
@@ -75,13 +75,14 @@ body {
 .outputmessage {
   position: relative;
   display: flex;
+  flex-direction: row;
   align-items: center;
   align-self: flex-start;
   max-width: 80%;
   background-color: #34b7f1;
   padding: 10px;
   margin: 15px;
-  border-radius: 10px;
+  border-radius: 10px 10px 10px 0px;
   color: aliceblue;
 }
 
@@ -95,22 +96,23 @@ body {
   position: relative;
   align-self: flex-end;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row;
   align-items: center;
   background-color: #25d366;
-  max-width: 80%;
+  max-width: 70%;
   height: fit-content;
   padding: 10px;
   margin: 15px;
-  border-radius: 10px;
+  border-radius: 10px 10px 0px 10px;
   color: aliceblue;
 }
 
 .messagetext {
+  font-size: 16px;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 4; /* number of lines to show */
+  -webkit-line-clamp: 4; /* number of lines to show*/
   -webkit-box-orient: vertical;
 }
 
@@ -147,5 +149,25 @@ body {
 @media only screen and (max-width: 600px) {
   .controls {
     height: 25px;
+  }
+
+  .outputmessage {
+    max-width: 60%;
+    max-height: 50px;
+    padding: 5px;
+    margin: 10px;
+  }
+
+  .messageprofile {
+    width: 2em;
+    border-radius: 50%;
+    margin-right: 5px;
+  }
+
+  .inputmessage {
+    max-width: 80%;
+    max-height: 50px;
+    padding: 5px;
+    margin: 10px;
   }
 }
