--- a/public/main.css
+++ b/public/main.css
@@ -8,12 +8,11 @@ body {
 
 .mainbody {
   background: #efefef;
-  height: 80vh;
+  height: 83vh;
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin: 3% 0 3% 0;
-  padding-top: 40px;
+  margin: 10vh 0 5vh 0;
   overflow-y: auto;
   overflow-x: hidden;
   text-align: start;
@@ -22,7 +21,7 @@ body {
 .infobar {
   position: fixed;
   width: 100%;
-  height: 8%;
+  height: 9vh;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -38,20 +37,12 @@ body {
   margin-right: 2%;
 }
 
-.filler {
-  display: flex;
-  height: 10%;
-  padding: 5px;
-  z-index: -1;
-  color: aliceblue;
-}
-
 .controls {
   position: fixed;
   display: flex;
   bottom: 0;
   width: 100%;
-  height: 5%;
+  height: 5vh;
   padding: 10px;
   background-color: rgb(18, 140, 126);
   justify-content: flex-start;
