--- a/public/main.css
+++ b/public/main.css
@@ -64,16 +64,32 @@ body {
 }
 
 .outputmessage {
-  position: relative;
   display: flex;
-  flex-direction: row;
-  align-items: center;
   align-self: flex-start;
-  max-width: 80%;
+  flex-direction: row;
+  flex-shrink: inherit;
+  align-items: center;
   background-color: #34b7f1;
+  max-width: 80%;
+  max-height: 100px;
   padding: 10px;
   margin: 15px;
   border-radius: 10px 10px 10px 0px;
+  color: aliceblue;
+}
+
+.inputmessage {
+  display: flex;
+  align-self: flex-end;
+  flex-direction: row;
+  flex-shrink: inherit;
+  align-items: center;
+  background-color: #25d366;
+  max-width: 80%;
+  max-height: 100px;
+  padding: 10px;
+  margin: 15px;
+  border-radius: 10px 10px 0px 10px;
   color: aliceblue;
 }
 
@@ -83,28 +99,11 @@ body {
   margin-right: 10px;
 }
 
-.inputmessage {
-  position: relative;
-  align-self: flex-end;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  background-color: #25d366;
-  max-width: 70%;
-  height: fit-content;
-  padding: 10px;
-  margin: 15px;
-  border-radius: 10px 10px 0px 10px;
-  color: aliceblue;
-}
-
 .messagetext {
   font-size: 16px;
+  max-width: 80%;
   overflow: hidden;
   text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 4; /* number of lines to show*/
-  -webkit-box-orient: vertical;
 }
 
 .sendbutton {
