--- a/public/main.css
+++ b/public/main.css
@@ -6,17 +6,6 @@ body {
   background-color: #efefef;
 }
 
-.mainbody {
-  background: #efefef;
-  height: 83vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  margin: 10vh 0 5vh 0;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-
 .infobar {
   position: fixed;
   width: 100%;
@@ -29,12 +18,24 @@ body {
   align-items: center;
   color: aliceblue;
   z-index: 99;
+  margin-bottom: 1px;
 }
 
 .profileimage {
   width: 4%;
   border-radius: 50%;
   margin-right: 2%;
+}
+
+.mainbody {
+  background: #efefef;
+  height: 83vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 10vh 0 5vh 0;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .controls {
